--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/client": "^6.24.1",
     "@sanity/icons": "^3.5.6",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/structure": "^2.36.2",
     "@sanity/vision": "^3.68.3",
     "axios": "^1.7.9",
     "next": "^15.1.3",
