--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/client": "^6.24.1",
+    "@sanity/desk-tool": "^2.36.2",
     "@sanity/icons": "^3.5.6",
     "@sanity/image-url": "^1.1.0",
     "@sanity/structure": "^2.36.2",
